--- a/Exercicios/Curriculo/HTML/index.html
+++ b/Exercicios/Curriculo/HTML/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Currículo - Matheus</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="\CSS\styles.css" />
   </head>
   <body>
     <header>
       <h1>Matheus Silva Meirelles Moreno</h1>
       <h2>Estudante de analise e desenvolvimento de sistemas</h2>
       <img
-        src="\Curriculo\img\img_de_maatheus.jpeg"
+        src="\img\img_de_maatheus.jpeg"
         alt="Foto de Matheus"
         width="200"
       />
